# wordtip

./: .gitignore  INSTALL  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  stop-words-en.txt
src/: .gitignore  Makefile.am  classifier.cc  classifier.hh  feature-ex.cc  feature-ex.hh  language.cc  language.hh  main.cc  naive-bayes.cc  naive-bayes.hh  noncopyable.hh  server-introspect.xml  server.cc  server.hh  stemmer.cc  stemmer.hh  stop-words-en.cc  stop-words-en.hh
src/libstemmer/: .gitignore
tests/: .gitignore  Makefile.am  test-classifier.cc  test-language.cc  test-naive-bayes.cc  test-split-simple.cc  test-stemmer.cc
